# practice

./: .gitignore  LICENSE  pyproject.toml
fibonacci_lib.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
fibonacci_project/examples/: main.py
fibonacci_project/fibonacci_lib/: __init__.py  consume_with_timeout.py  fibonacci.py  test_consume_with_timeout.py
