[project]
name = "fibonacci_lib"
version = "0.1.0"
description = "A library for consuming infinite Fibonacci with timeout."
authors = [{ name = "Taras", email = "test1234@gmail.com" }]
license = "MIT"
requires-python = ">=3.8"

[tool.setuptools]
packages = ["fibonacci_lib"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"