[project]
name = "fibonacci_lib"
version = "0.1.0"
description = "A library for consuming infinite Fibonacci with timeout."
authors = [{ name = "Taras", email = "test1234@gmail.com" }]
license = "MIT"
dependencies = []

[tool.setuptools]
packages = ["fibonacci_project.fibonacci_lib"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
